--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ body.wrong {
   padding: 5px 10px;
   color: white;
   outline: none;
+  font-size: 1.2rem;
 }
 
 .btn:hover {
@@ -82,4 +83,8 @@ body.wrong {
 
 .hide {
   display: none;
+}
+
+.question {
+  font-size: 1.4rem;
 }
